tests/route/invalid_examples/too_many_route_args.stderr
error: route attribute required 2 arguments but there still are tokens left to be parsed. First argument should be an HTTP method and the second one URL path
 --> tests/route/invalid_examples/too_many_route_args.rs:5:17
  |
5 | #[route(GET, "/", "FOO")]
  |                 ^

warning: unused import: `lambda_http::Error`
 --> tests/route/invalid_examples/too_many_route_args.rs:2:5
  |
2 | use lambda_http::Error;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/route/invalid_examples/too_many_route_args.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/route/invalid_examples/too_many_route_args.rs`
